--- a/package.json
+++ b/package.json
@@ -9,10 +9,20 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~49.0.15",
-    "expo-status-bar": "~1.6.0",
+    "@expo/vector-icons": "^13.0.0",
+    "@react-native-async-storage/async-storage": "1.17.11",
+    "@react-navigation/bottom-tabs": "^6.5.11",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.9.17",
+    "@types/react": "~18.0.27",
+    "@types/uuid": "^9.0.7",
+    "expo": "~48.0.18",
+    "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
-    "react-native": "0.72.6"
+    "react-native": "0.71.8",
+    "react-native-vector-icons": "^9.2.0",
+    "typescript": "^4.9.4",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
