--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "to-do-pomodoro",
+  "name": "migration",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -9,23 +9,22 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/vector-icons": "^13.0.0",
-    "@react-native-async-storage/async-storage": "1.17.11",
+    "@expo/vector-icons": "^14.0.0",
+    "@react-native-async-storage/async-storage": "^1.21.0",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
-    "@types/react": "~18.0.27",
-    "@types/uuid": "^9.0.7",
-    "expo": "~48.0.18",
-    "expo-status-bar": "~1.4.4",
+    "expo": "~50.0.5",
+    "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
-    "react-native": "0.71.8",
-    "react-native-vector-icons": "^9.2.0",
-    "typescript": "^4.9.4",
+    "react-native": "0.73.2",
+    "react-native-vector-icons": "^10.0.3",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@types/react": "~18.2.45",
+    "typescript": "^5.1.3"
   },
   "private": true
 }
